add_library(nspmodel
AtomLib.cpp
AtomProperty.cpp
BaseDistanceMatrix.cpp
BasePairComposition.cpp
BaseRotamer.cpp
BaseRotamerLib.cpp
PhoDistanceMatrix.cpp
PhophateGroup.cpp
ProteinRep.cpp
ResName.cpp
RnaAtomLib.cpp
RNABaseName.cpp
RNARibose.cpp
Sub.cpp
RNABaseLib.cpp
BasePair.cpp
AssignRNASS.cpp)